--- a/mayoristas.html
+++ b/mayoristas.html
@@ -16,7 +16,7 @@
 <header>
     <nav>
 
-    <div class="titulo">
+    <div cclass="container-fluid titulo">
         <h1><span class="span-telas">TELAS</span>MARTS</h1>
     </div>
 
