--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
 <!-- ESTE ES MI HEADER -->
-<header class="container-fluid">
+<header>
 
         <nav>
 
-        <div class="titulo">
+        <div class="container-fluid titulo">
             <h1><span class="span-telas">TELAS</span>MARTS</h1>
         </div>
 
@@ -78,7 +79,7 @@
 
 <!-- ESTE ES MI FOOTER -->
 
-<footer class="footer-container">
+<footer>
     <div class="div-footer">
         <ul class="ul-footer">
            <a href="index.html"><li class="li-footer">inicio</li></a>
