--- a/shatoosh.html
+++ b/shatoosh.html
@@ -16,7 +16,7 @@
 <header>
     <nav>
 
-    <div class="titulo">
+    <div class="container-fluid titulo">
         <h1><span class="span-telas">TELAS</span>MARTS</h1>
     </div>
 
@@ -56,7 +56,7 @@
 
 <!-- ESTE ES MI FOOTER -->
 
-<footer>
+<footer class="footer-contacto">
     <div class="div-footer">
         <ul class="ul-footer">
            <a href="index.html"><li class="li-footer">inicio</li></a>
