--- a/porductos.html
+++ b/porductos.html
@@ -45,47 +45,47 @@
 
             <div class="Container-img">
                 <img src="/img/Bengalina engomada.jpeg" alt="">
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Bengalina engomada</p>
                 <button type="button" class="btn btn-primary">Agregar Carrito</button>
             </div>
             
 
             <div class="Container-img">
                 <img src="/img/FORRO SMOTH.jpg" alt="">
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Tela smooth</p>
                 <button type="button" class="btn btn-primary">Agregar Carrito</button>
             </div>
             <div class="Container-img">
                 <img src="/img/Microfibra termica.webp" alt="">
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Microfibra termica</p>
                 <button type="button" class="btn btn-primary">Agregar Carrito</button>
             </div>
 
             <div class="Container-img">
                 <img src="/img/Tela Flame.png" alt="">
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Cortes de tela Flame</p>
                 <button type="button" class="btn btn-primary">Agregar Carrito</button>
             </div>
             <div class="Container-img">
                 <img src="/img/Tela gasa crepe.webp" alt="">
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Tela gasa crepe</p>
                 <button type="button" class="btn btn-primary">Agregar Carrito</button>
             </div>
 
             <div class="Container-img">
                 <img src="/img/Tela Lanilla.webp" alt="">
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Tela lanilla</p>
                 <button type="button" class="btn btn-primary">Agregar Carrito</button>
             </div>
             <div class="Container-img">
                 <img src="/img/Tela de lino viscosa natural.jpg" alt="">
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Tela de lino viscosa natural</p>
                 <button type="button" class="btn btn-primary">Agregar Carrito</button>
             </div>
 
             <div class="Container-img">
                 <img src="/img/TUL LYCRA.jpg" alt="">
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Tul lycra</p>
                  <button type="button" class="btn btn-primary">Agregar Carrito</button>   
             </div>
 
